[package]
name = "nucleo144_rs_robo"
version = "0.0.0-zero.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"

[dependencies]
serialio = "0.1"
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
cortex-m-rtfm = "0.4"

[dependencies.stm32f7x7-hal]
version = "0.2"

[dependencies.stm32f7]
features = ["stm32f7x7", "rt"]
version = "0.7"
